@@ -1,3 +1,8 @@
+2013-10-07  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar.c (avt_put_char):
+	SO/SI switch underlined on/off; DC1/DC2: bold on/off
+
 2013-10-04  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtdata.h, avtdata.c: remove read24 again
